# Orchustr

./: Cargo.toml  README.md
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
bindings/dart/: pubspec.yaml
bindings/python/: pyproject.toml
bindings/typescript/: index.d.ts  package-lock.json  package.json
crates/or-anchor/: Cargo.toml
crates/or-beacon/: Cargo.toml
crates/or-bridge/: Cargo.toml
crates/or-bridge/src/: lib.rs
crates/or-checkpoint/: Cargo.toml
crates/or-colony/: Cargo.toml
crates/or-compass/: Cargo.toml
crates/or-conduit/: Cargo.toml
crates/or-conduit/src/domain/: contracts.rs
crates/or-conduit/src/infra/adapters/: ai21.rs  anthropic.rs  bedrock.rs  cohere.rs  gemini.rs  huggingface.rs  openai_compat.rs  replicate.rs
crates/or-conduit/src/infra/implementations/: ai21.rs  anthropic.rs  azure.rs  bedrock.rs  cohere.rs  gemini.rs  huggingface.rs  openai_compat.rs  replicate.rs  vertex.rs
crates/or-conduit/tests/unit/: mod.rs  providers.rs
crates/or-core/: Cargo.toml
crates/or-forge/: Cargo.toml
crates/or-loom/: Cargo.toml
crates/or-mcp/: Cargo.toml
crates/or-pipeline/: Cargo.toml
crates/or-prism/: Cargo.toml
crates/or-recall/: Cargo.toml
crates/or-relay/: Cargo.toml
crates/or-sentinel/: Cargo.toml
crates/or-sieve/: Cargo.toml
crates/tools/or-tools-core/: Cargo.toml
crates/tools/or-tools-core/src/: lib.rs
crates/tools/or-tools-core/src/application/: orchestrators.rs
crates/tools/or-tools-core/src/domain/: contracts.rs  entities.rs  errors.rs
crates/tools/or-tools-core/src/infra/: registry.rs
crates/tools/or-tools-core/tests/: unit_suite.rs
docs/: CHANGELOG.md  QUICKSTART.md  README.md  langchain-comparison.md
docs/architecture/: crate-dependency-graph.md  multi-language-strategy.md
docs/ci-cd/: github-actions.md  overview.md  release-process.md
docs/config/: cargo-workspace.md
docs/reference/: api-matrix.md  crate-index.md  glossary.md
tests/integration/: Cargo.toml  mcp_client_server.rs
(+188 files in other folders)
