[package]
authors.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
name = "or-tools-core"
rust-version.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
